...
    <string name="create_account_text">Create Account</string>
    <string name="select_role_text">Select Role</string>
    <string name="signup_failed">"Sign Up failed"</string>
    <string name="update_users_failed">"Updating users failed"</string>


    <string name="rb_label_swiper_edition">Swipe R. Editon</string>
    <string name="rb_label_dragdrop"><![CDATA[Drag & Drop]]></string>
    <string name="edit_dialog_cancel_b">Cancel</string>
    <string name="edit_dialog_update_b">Confirm</string>
    <string name="menu_view_proof_picture">Proof Photos</string>
    <string name="refresh">Refresh</string>
    <string name="hint_dialog_client_id">Client ID</string>
    <string name="hint_dialog_timestamp">Timestamp</string>
    <string name="hint_dialog_waiting_time">Waiting time</string>
    <string name="hint_dialog_rate">Rate</string>
    <string name="hint_dialog_actions">Actions</string>
    <string name="hint_dialog_notes">Notes</string>
    <string name="rb_label_swipel_deletion">Swipe L. Deletion</string>
    <string name="swipeleft_confirm_button_label">Confirm</string>
    <string name="swipeleft_cancel_button_label">Cancel</string>
    <string name="delete_dialog_title">Delete the swiped record ?</string>
    <string name="edit_rejected_snap_label">Wrong format. Edition canceled</string>
    <string name="edit_confirmed_snap_label">Record edited</string>
    <string name="rb_label_touch_click">Touch click</string>
    <string name="share">Share</string>
    <string name="no_contacts_found">No contacts found. Please check your search criteria and try again.</string>
    <string name="add_contacts_floating_button">add Contacts floating button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
...
    <string name="username_not_unique">Sorry, that username is already taken. Please choose a different username.</string>
    <string name="empty_username">Please enter username to add user.</string>
    <string name="roadbookpreferencescheckedtextview">RoadBookPreferencesCheckedTextView</string>
    <string name="application_settings">Application Settings</string>
    <string name="save_roadbook_preferences">Save RoadBook Preferences</string>
    <string name="load_road_book_back_up">Load RoadBook back-up</string>
    <string name="delete_all_roadbook">Delete all RoadBook</string>
    <string name="delete_all_roadbook_dialog_title">Delete all the current RoadBook records ?</string>
    <string name="positive_label_delete_all_roadbook_dialog">Confirm</string>
    <string name="negative_label_delete_all_roadbook_dialog">No !</string>
    <string name="snap_delete_all_roadbook">All Roadbook records have been deleted</string>
    <string name="snap_load_roadbook_backup">The last backup has been loaded</string>
    <string name="managing_client_text">Managing Client: </string>
    <string name="managing_client">\@managing_client</string>
    <string name="super_client_username">Super client username</string>
    <string name="super_client_id_not_valid">The managing client\'s username is not valid.</string>
...
