...
            android:layout_marginBottom="12dp"
            android:hint="@string/hint_dialog_client_id"
            app:endIconMode="clear_text">

            <AutoCompleteTextView
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.FilledBox"
                android:id="@+id/autoCompleteClientID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

...
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/hint_dialog_timestamp">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.FilledBox"
                android:id="@+id/editTextTimestamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="time" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.TextButton"
            android:id="@+id/button_erase_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/erase"/>

        <com.google.android.material.textfield.TextInputLayout
...
            android:layout_marginBottom="12dp"
            android:hint="@string/hint_dialog_waiting_time"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.FilledBox"
                android:id="@+id/editTextWaitingTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>
...
            android:layout_marginBottom="12dp"
            android:hint="@string/hint_dialog_rate"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.FilledBox"
                android:id="@+id/editTextRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>
...
            android:layout_marginBottom="12dp"
            android:hint="@string/hint_dialog_actions"
            app:endIconMode="clear_text">

            <MultiAutoCompleteTextView
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.FilledBox"
                android:id="@+id/multiAutoCompleteActions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
...
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/hint_dialog_notes"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>
...
