package com.github.factotum_sdp.factotum.ui.roadbook

import android.Manifest
import android.content.Context
import android.view.View
import androidx.navigation.fragment.NavHostFragment
import androidx.recyclerview.widget.RecyclerView
import androidx.test.core.app.ApplicationProvider
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.Espresso.openActionBarOverflowOrOptionsMenu
import androidx.test.espresso.NoMatchingViewException
import androidx.test.espresso.ViewAssertion
import androidx.test.espresso.action.*
import androidx.test.espresso.action.ViewActions.*
import androidx.test.espresso.assertion.PositionAssertions.isCompletelyAbove
import androidx.test.espresso.assertion.PositionAssertions.isCompletelyBelow
import androidx.test.espresso.assertion.ViewAssertions.doesNotExist
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.contrib.DrawerActions
import androidx.test.espresso.contrib.RecyclerViewActions
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.rules.ActivityScenarioRule
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.platform.app.InstrumentationRegistry.getInstrumentation
import androidx.test.rule.GrantPermissionRule
import androidx.test.uiautomator.UiDevice
import androidx.test.uiautomator.UiSelector
import com.github.factotum_sdp.factotum.MainActivity
import com.github.factotum_sdp.factotum.R
import com.github.factotum_sdp.factotum.data.LocationClientFactory
import com.github.factotum_sdp.factotum.data.MockLocationClient
import com.github.factotum_sdp.factotum.firebase.FirebaseInstance
import com.github.factotum_sdp.factotum.firebase.FirebaseStringFormat.firebaseDateFormatted
import com.github.factotum_sdp.factotum.firebase.FirebaseStringFormat.firebaseSafeString
import com.github.factotum_sdp.factotum.model.DRecordList
import com.github.factotum_sdp.factotum.model.DestinationRecord
import com.github.factotum_sdp.factotum.model.Shift
import com.github.factotum_sdp.factotum.model.ShiftList
import com.github.factotum_sdp.factotum.model.User
import com.github.factotum_sdp.factotum.placeholder.DestinationRecords
import com.github.factotum_sdp.factotum.placeholder.UsersPlaceHolder.USER_COURIER
import com.github.factotum_sdp.factotum.repositories.ShiftRepository
import com.github.factotum_sdp.factotum.repositories.ShiftRepository.Companion.DELIVERY_LOG_DB_PATH
import com.github.factotum_sdp.factotum.roadBookDataStore
import com.github.factotum_sdp.factotum.shiftDataStore
import com.github.factotum_sdp.factotum.ui.bag.PackCreationDialogBuilder
import com.github.factotum_sdp.factotum.ui.bag.BagAdapter
import com.github.factotum_sdp.factotum.ui.roadbook.RoadBookFragment.Companion.ROADBOOK_DB_PATH
import com.github.factotum_sdp.factotum.ui.roadbook.TouchCustomMoves.swipeLeftTheRecordAt
import com.github.factotum_sdp.factotum.ui.roadbook.TouchCustomMoves.swipeRightTheRecordAt
import com.github.factotum_sdp.factotum.utils.GeneralUtils
import com.github.factotum_sdp.factotum.utils.GeneralUtils.Companion.initFirebase
import com.github.factotum_sdp.factotum.utils.PreferencesSetting
import com.google.firebase.database.DatabaseReference
import kotlinx.coroutines.ExperimentalCoroutinesApi
import kotlinx.coroutines.delay
import kotlinx.coroutines.flow.first
import kotlinx.coroutines.runBlocking
import kotlinx.coroutines.test.runTest
import org.hamcrest.CoreMatchers.*
import org.junit.After
import org.junit.Before
import org.junit.BeforeClass
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith
import java.text.DateFormat
import java.text.SimpleDateFormat
import java.util.*
import java.util.concurrent.CompletableFuture


@RunWith(AndroidJUnit4::class)
class RoadBookFragmentTest {

    @get:Rule
    val coarseLocationRule = GrantPermissionRule.grant(Manifest.permission.ACCESS_COARSE_LOCATION)

    @get:Rule
    val fineLocationRule = GrantPermissionRule.grant(Manifest.permission.ACCESS_FINE_LOCATION)

    @get:Rule
    val postNotificationGroundService = GrantPermissionRule.grant(Manifest.permission.POST_NOTIFICATIONS)


    @get:Rule
    var testRule = ActivityScenarioRule(
        MainActivity::class.java
    )

    companion object {
        const val WORST_REFRESH_TIME = 500L

        @BeforeClass
        @JvmStatic
        fun setUpDatabase() {
            initFirebase()
        }

        @BeforeClass
        @JvmStatic
        fun dismissANRSystemDialog() {
            val device = UiDevice.getInstance(getInstrumentation())
            val waitButton = device.findObject(UiSelector().textContains("wait"))
            if (waitButton.exists()) {
                waitButton.click()
            }
        }
    }
    private val courier = User(USER_COURIER.uid, USER_COURIER.name, USER_COURIER.email, USER_COURIER.role)

    @Before
    fun toRoadBookFragment() {
        GeneralUtils.injectLoggedInUser(testRule, courier)
        PreferencesSetting.setRoadBookPrefs(testRule) // Ensure "use RoadBook preferences" is disabled
        onView(withId(R.id.drawer_layout))
            .perform(DrawerActions.open())
        onView(withId(R.id.roadBookFragment))
            .perform(click())
        openActionBarOverflowOrOptionsMenu(ApplicationProvider.getApplicationContext())
        onView(withText(R.string.rb_label_touch_click)).perform(click())
    }

    @After
    fun cleanUp(){
        val dbShiftRef = FirebaseInstance.getDatabase().reference.child(DELIVERY_LOG_DB_PATH)
        dbShiftRef.removeValue()
    }

    @Test
    fun radioButtonsAreAccessible() {
        openActionBarOverflowOrOptionsMenu(ApplicationProvider.getApplicationContext())
        onView(withText(R.string.rb_label_dragdrop)).check(matches(isDisplayed()))
        onView(withText(R.string.rb_label_swiper_edition)).check(matches(isDisplayed()))
        onView(withText(R.string.rb_label_swipel_deletion)).check(matches(isDisplayed()))
    }

    @Test
    fun fabIsCorrectlyDisplayedOnFirstView() {
        onView(withId(R.id.fab))
            .check(matches(isDisplayed()))
    }

    @Test
    fun roadBookIsCorrectlyDisplayedOnFirstView() {
        onView(withId(R.id.list))
            .check(matches(isDisplayed()))
    }

    @Test
    fun startingRecordsAreDisplayed() {
        for (i in 0..2)
            onView(withText(DestinationRecords.RECORDS[i].destID))
                .check(matches(isDisplayed()))
    }

    // ============================================================================================
    // ===================================== Delete Tests =========================================

    @Test
    fun swipeLeftDeleteRecord() {
        // Record is there
        onView((withText(DestinationRecords.RECORDS[2].destID)))
            .check(matches(isDisplayed()))

        swipeLeftTheRecordAt(2)
        onView(withText(R.string.delete_dialog_title))
        onView(withText(R.string.swipeleft_confirm_button_label)).perform(click())

        // Record added previously is now deleted
        onView((withText(DestinationRecords.RECORDS[2].destID)))
            .check(doesNotExist())
    }

    @Test
    fun swipeLeftButCancelLetTheRecord() {
        swipeLeftTheRecordAt(2)
        onView(withText(R.string.delete_dialog_title))
        onView(withText(R.string.swipeleft_cancel_button_label)).perform(click())

        onView((withText(DestinationRecords.RECORDS[2].destID)))
            .check(matches(isDisplayed()))
    }

    // ============================================================================================
    // ================================== Add record Tests ========================================
    @Test
    fun newRecordIsDisplayedAtTheEnd() {
        val clientID = DestinationRecords.RECORD_TO_ADD.clientID
        onView(withText(DestinationRecords.RECORDS[0].destID))
            .check(matches(isDisplayed()))
        // Add a new record
        newRecord()

        onView((withText("$clientID#1")))
            .check(matches(isDisplayed()))
    }

    @Test
    fun addWithWrongFormatISAborted() {
        val clientID = DestinationRecords.RECORD_TO_ADD.clientID
        onView(withId(R.id.fab)).perform(click())
        onView(withId(R.id.autoCompleteClientID))
            .perform(click(), typeText("$clientID "), closeSoftKeyboard())
        onView(withId(R.id.editTextTimestamp)).perform(click())
        onView(withText(timePickerUpdateBLabel)).perform(click())
        onView(withId(R.id.button_erase_time)).perform(click())

        onView(withId(R.id.editTextTimestamp)).perform(typeText("2222"), closeSoftKeyboard())
        onView(withText(R.string.edit_dialog_cancel_b)).perform(click())

        onView(withId(R.id.list)).perform(
            click(),
            RecyclerViewActions.scrollToLastPosition<RoadBookViewAdapter.RecordViewHolder>(),
        )
        onView((withText("$clientID#1")))
            .check(doesNotExist())
    }

    // ============================================================================================
    // ================================== RoadBook Back-up Tests ==================================
    @Test
    fun roadBookIsBackedUpCorrectlyWhenOnline() {
        val db = FirebaseInstance.getDatabase()
        val date = Calendar.getInstance().time
        val ref = db.reference
            .child(ROADBOOK_DB_PATH)
            .child(SimpleDateFormat.getDateInstance(DateFormat.DEFAULT, Locale.ENGLISH).format(date))
            .child(firebaseSafeString(courier.name))

        // Add 1 record
        newRecord()

        // Navigate out of the RoadBookFragment
        onView(withId(R.id.drawer_layout))
            .perform(DrawerActions.open())
        onView(withId(R.id.mapsFragment))
            .perform(click())
        onView(withId(R.id.fragment_maps_directors_parent))
            .check(matches(isDisplayed()))

        // Our target value to fetch
        // is represented as a List<String> in Firebase
        val future = CompletableFuture<List<DestinationRecord>>()

        ref.get().addOnSuccessListener { snapshot ->
            val records = snapshot.children.mapNotNull {
                it.getValue(DestinationRecord::class.java)
            }
            future.complete(records)

        }.addOnFailureListener {
            future.completeExceptionally(it)
        }

        assert(future.get().any { it.clientID == newRecordClientID})
    }

    @Test
    fun roadBookIsBackedUpCorrectlyWhenOffline() {
        val db = FirebaseInstance.getDatabase()
        db.goOffline()
        val context = ApplicationProvider.getApplicationContext<Context>().applicationContext

        // Add 1 record
        newRecord()

        // Navigate out of the RoadBookFragment
        onView(withId(R.id.drawer_layout))
            .perform(DrawerActions.open())
        onView(withId(R.id.mapsFragment))
            .perform(click())
        onView(withId(R.id.fragment_maps_directors_parent))
            .check(matches(isDisplayed()))

        var ls: List<DestinationRecord>
        runBlocking {
            ls = context.roadBookDataStore.data.first()
        }

        db.goOnline()
        assert(ls.any { it.clientID == newRecordClientID})
    }

    @Test
    fun networkAndThenLocalOnlyBackUpAreConsistent() {
        val db = FirebaseInstance.getDatabase()
        val date = Calendar.getInstance().time
        val ref = db.reference
            .child("Sheet-shift")
            .child(SimpleDateFormat.getDateInstance().format(date))
            .child(firebaseSafeString(courier.name))

        // Our target value to fetch
        // is represented as a List<String> in Firebase
        val future = CompletableFuture<List<DestinationRecord>>()

        // Navigate out of the RoadBookFragment
        onView(withId(R.id.drawer_layout))
            .perform(DrawerActions.open())
        onView(withId(R.id.roadBookFragment))
            .perform(click())
        onView(withId(R.id.drawer_layout))
            .perform(DrawerActions.open())
        onView(withId(R.id.mapsFragment)).perform(click())

        ref.get().addOnSuccessListener { snapshot ->
            val records = snapshot.children.mapNotNull {
                it.getValue(DestinationRecord::class.java)
            }
            future.complete(records)

        }.addOnFailureListener {
            future.completeExceptionally(it)
        }

        // Add 1 record (To bypass the app cache and write to the disk)
        onView(withId(R.id.drawer_layout))
            .perform(DrawerActions.open())
        onView(withId(R.id.roadBookFragment))
            .perform(click())
        newRecord()

        // Navigate out of the RoadBookFragment
        onView(withId(R.id.drawer_layout))
            .perform(DrawerActions.open())
        onView(withId(R.id.mapsFragment)).perform(click())

        var fromLocal: List<DestinationRecord>
        val context = ApplicationProvider.getApplicationContext<Context>().applicationContext
        runBlocking {
            fromLocal = context.roadBookDataStore.data.first()
        }

        val fromNetwork = future.get()

        assert( // While removing the record added
            fromLocal.subList(0, fromLocal.size - 1) == fromNetwork
        )
    }

    @Test
    fun roadBookIsCorrectlyCleared() {
        clearRoadBook()
        isRecyclerViewEmptyCheck()
    }

    @Test
    fun onCancelInSettingsNothingIsCleared(){
        onView(withId(R.id.drawer_layout))
            .perform(DrawerActions.open())
        onView(withId(R.id.settingsFragment))
            .perform(click())

        onView(withId(R.id.delete_all_roadbook)).perform(click())
        onView(withText(R.string.negative_label_delete_all_roadbook_dialog)).perform(click())

        // Back to RB
        onView(withId(R.id.drawer_layout))
            .perform(DrawerActions.open())
        onView(withId(R.id.roadBookFragment))
            .perform(click())

        isStartingRecyclerViewCheck()
    }

    @Test
    fun roadBookFromBackUpAfterClearedOnline() {
        isStartingRecyclerViewCheck()

        clearRoadBook()

        // Go to Settings
        onView(withId(R.id.drawer_layout))
            .perform(DrawerActions.open())
        onView(withId(R.id.settingsFragment))
            .perform(click())

        onView(withId(R.id.load_roadbook_backup)).perform(click())

        // Go back RB
        onView(withId(R.id.drawer_layout))
            .perform(DrawerActions.open())
        onView(withId(R.id.roadBookFragment))
            .perform(click())

        //Check starting records are displayed :
        isStartingRecyclerViewCheck()
    }

    @Test
    fun roadBookFromBackUpAfterClearedOffline() {
        val db = FirebaseInstance.getDatabase()

        db.goOffline()

        isStartingRecyclerViewCheck()
        clearRoadBook()

        // Go to Settings
        onView(withId(R.id.drawer_layout))
            .perform(DrawerActions.open())
        onView(withId(R.id.settingsFragment))
            .perform(click())

        onView(withId(R.id.load_roadbook_backup)).perform(click())

        // Go back RB
        onView(withId(R.id.drawer_layout))
            .perform(DrawerActions.open())
        onView(withId(R.id.roadBookFragment))
            .perform(click())

        db.goOnline()

        //Check starting records are displayed :
        isStartingRecyclerViewCheck()
    }

    // ============================================================================================
    // ================================== Deliveries Caching Tests ================================

    @Test
    fun endShiftUpdates() {
        val db = FirebaseInstance.getDatabase()

        // finished a delivery
        updateTimestampOfRecord(3)
        updateTimestampOfRecord(4)

        val rbViewModel = getRbViewModel()!!
        val shift = Shift(Date(), courier, rbViewModel.recordsListState.value!!)
        val shiftList = ShiftList(listOf(shift))

        val date = shift.date ?: ShiftRepository.DEFAULT_DATE_FOR_PATH
        val dbShiftRef = db.reference
            .child(DELIVERY_LOG_DB_PATH)
            .child(firebaseSafeString(shift.user.name))
            .child(firebaseDateFormatted(date))

        // finishes the shift
        endShift()

        // Our target value to fetch
        // is represented as a List<String> in Firebase
        val shifts = getShiftFromDb(dbShiftRef)

        shifts.zip(shiftList).all { pair ->
            pair.first.records.zip(pair.second.records).all { recordPair ->
                recordPair.first.destID == recordPair.second.destID
                        && recordPair.first.timeStamp == recordPair.second.timeStamp}
                    && pair.first.user == pair.second.user
        }
    }
    @Test
    fun shiftIsBackedUpCorrectlyWhenOffline() {
        val db = FirebaseInstance.getDatabase()
        db.goOffline()
        val context = ApplicationProvider.getApplicationContext<Context>().applicationContext

        // finished a shift
        updateTimestampOfRecord(3)

        //end shift
        endShift()

        var ls: ShiftList
        runBlocking {
            ls = context.shiftDataStore.data.first()
        }
        val lastShift = ls.shifts.last()

        db.goOnline()
        val rbViewModel = getRbViewModel()!!

        val shift = Shift(Date(), courier, rbViewModel.recordsListState.value!!)
        assert(lastShift.user == shift.user)
        assert(lastShift.records.zip(shift.records).all { pair ->
            pair.first.destID == pair.second.destID
                    && pair.first.timeStamp?.let { pair.second.timeStamp != null } ?: (pair.second.timeStamp == null)
        })

    }

    // ============================================================================================
    // ===================================== Edit Tests ===========================================
    @Test
    fun swipeRightTriggersEditScreen() {
        swipeRightTheRecordAt(4)
        onView(withText(R.string.edit_dialog_update_b)).check(matches(isDisplayed()))
        onView(withText(R.string.edit_dialog_cancel_b)).check(matches(isDisplayed()))
    }

    @Test
    fun editARecordDestIDWorks() {
        val newClientID = DestinationRecords.RECORDS[1].clientID
        swipeRightTheRecordAt(2)
        onView(withId(R.id.autoCompleteClientID)).perform(clearText()).perform(typeText(newClientID), closeSoftKeyboard())
        onView(withText(R.string.edit_dialog_update_b)).perform(click())
        onView((withText("$newClientID#2"))).check(matches(isDisplayed()))
    }

    @Test
    fun editWithAWrongClientIDAndConfirmDoesNotApplyChanges() {
        swipeRightTheRecordAt(2)
        onView(withId(R.id.autoCompleteClientID))
            .perform(click(), clearText(), typeText("edited"), closeSoftKeyboard())
        onView(withText(R.string.edit_dialog_cancel_b)).perform(click())
        onView(withText(DestinationRecords.RECORDS[2].destID)).check(matches(isDisplayed()))
    }

    @OptIn(ExperimentalCoroutinesApi::class)
    @Test
    fun editWithAnExistingClientID() = runTest {
        // Means clientID already used by one record in the roadbook
        val clientID = DestinationRecords.RECORDS[2].clientID
        runBlocking {
            swipeRightTheRecordAt(3) // edit one record displayed below which has another clientID
            onView(withId(R.id.autoCompleteClientID)).perform(
                clearText(),
                typeText(clientID),
                closeSoftKeyboard()
            ) // set for the same client that different record
            onView(withText(R.string.edit_dialog_update_b)).perform(click())
            delay(WORST_REFRESH_TIME)
        }
        onView(withText("$clientID#2")).check(matches(isDisplayed())) // unique destID is computed
    }

    @Test
    fun editWithAWrongFormatIsAborted() {
        swipeRightTheRecordAt(2)
        onView(withId(R.id.autoCompleteClientID))
            .perform(click(), clearText(), typeText("$newRecordClientID "), closeSoftKeyboard())
        onView(withId(R.id.editTextTimestamp)).perform(click())
        onView(withText(timePickerUpdateBLabel)).perform(click())
        onView(withId(R.id.button_erase_time)).perform(click())
        onView(withId(R.id.editTextTimestamp)).perform(typeText("2222"))
        onView(withText(R.string.edit_dialog_cancel_b)).perform(click())

        onView((withText("$newRecordClientID#1")))
            .check(doesNotExist())
    }

    @Test
    fun updateEditWithNoChange() {
        swipeRightTheRecordAt(2)
        onView(withText(R.string.edit_dialog_update_b)).perform(click())
        onView((withText(DestinationRecords.RECORDS[2].destID)))
            .check(matches(isDisplayed()))
    }

    @Test
    fun cancelOnTimePickerWorks() {
        eraseFirstRecTimestamp()
        swipeRightTheRecordAt(2)
        onView(withId(R.id.autoCompleteClientID))
            .perform(click(), clearText(), typeText("$newRecordClientID "), closeSoftKeyboard())

        val cal: Calendar = Calendar.getInstance()
        onView(withId(R.id.editTextTimestamp)).perform(click())
        onView(withText(timePickerUpdateBLabel)).perform(click())
        onView(withId(R.id.button_erase_time)).perform(click())
        onView(withText(R.string.edit_dialog_update_b)).perform(click())

        onView(withText(startsWith("arrival : ${timestampUntilHourFormat(cal)}"))).check(
            doesNotExist()
        )
    }

    @Test
    fun editEveryFieldsWorks() {
        onView(withText(DestinationRecords.RECORDS[2].destID)).check(matches(isDisplayed()))
        swipeRightTheRecordAt(2)

        // Edit all fields :
        onView(withId(R.id.autoCompleteClientID))
            .perform(click(), clearText(), typeText("$newRecordClientID "), closeSoftKeyboard())

        val cal: Calendar = Calendar.getInstance()
        onView(withId(R.id.editTextTimestamp)).perform(click())
        onView(withText(timePickerUpdateBLabel)).perform(click()) // edited through TimePicker
        onView(withId(R.id.editTextWaitingTime))
            .perform(click(), clearText(), typeText("5"), closeSoftKeyboard())
        onView(withId(R.id.editTextRate))
            .perform(click(), clearText(), typeText("7"), closeSoftKeyboard())
        onView(withId(R.id.multiAutoCompleteActions))
            .perform(
                click(),
                clearText(),
                typeText("deliver, deliver, contact"),
                closeSoftKeyboard()
            )
        onView(withId(R.id.editTextNotes))
            .perform(click(), typeText("Some notes about how SDP is fun"), closeSoftKeyboard())

        // Confirm edition :
        onView(withText(R.string.edit_dialog_update_b)).perform(click())

        // Check edited record is correctly displayed :
        onView(withText("$newRecordClientID#1")).check(matches(isDisplayed()))

        eraseFirstRecTimestamp() // For having no ambiguity btw Timestamp on screen
        onView(withText(startsWith("arrival : ${timestampUntilHourFormat(cal)}"))).check(
            matches(
                isDisplayed()
            )
        )
        onView(withText("wait : 5'")).check(matches(isDisplayed()))
        onView(withText("rate : 7")).check(matches(isDisplayed()))
        onView(withText("actions : (deliver x2| contact)")).check(matches(isDisplayed()))

        //Check notes were edited :
        swipeRightTheRecordAt(2)
        onView(withText("Some notes about how SDP is fun")).check(matches(isDisplayed()))
    }

    private fun eraseFirstRecTimestamp() {
        swipeRightTheRecordAt(0)
        onView(withId(R.id.editTextTimestamp)).perform(click())
        onView(withText(timePickerUpdateBLabel)).perform(click())
        onView(withId(R.id.button_erase_time)).perform(click())
        onView(withText(R.string.edit_dialog_update_b)).perform(click())
    }

    @Test
    fun cancelOnRecordEditionWorks() {
        swipeRightTheRecordAt(2)
